--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -63,12 +63,12 @@ services:
   react:
     build:
       context: .
-      dockerfile: ../mosher-forecast-frontend/Dockerfile
+      dockerfile: ../Mosher-Forecast-React/Dockerfile
     ports:
       - "3001:8000"
     volumes:
-      - ../mosher-forecast-frontend:/app
-      - ../mosher-forecast-frontend/app/node_modules
+      - ../mosher-forecast-react:/app
+      - ../mosher-forecast-react/app/node_modules
 #      - ../mosher-forecast-frontend:/opt/node_app/app:delegated
       # bind-mounting these two files in will let you add packages during development without rebuilding
       # for example, to add bower to your app while developing, just install it inside the container
