--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -68,7 +68,7 @@ services:
       - "3001:8000"
     volumes:
       - ../Mosher-Forecast-React:/app
-      - ../Mosher-Forecast-React/app/node_modules
+      - /Mosher-Forecast-React/app/node_modules
 #      - ../mosher-forecast-frontend:/opt/node_app/app:delegated
       # bind-mounting these two files in will let you add packages during development without rebuilding
       # for example, to add bower to your app while developing, just install it inside the container
