--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -64,6 +64,8 @@ services:
     build:
       context: .
       dockerfile: ../Mosher-Forecast-React/Dockerfile
+      args:
+        - NODE_ENV=development
     ports:
       - "3001:8000"
     volumes:
